--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<imagetarget id='asianpaint' src='targets/asianpaint.png'></imagetarget>
 		<imagetarget id='mgi' src='targets/mgi.png'></imagetarget>
 		<imagetarget id='savlon' src='targets/savlon.png'></imagetarget>
-		<imagetarget id='roma' src='targets/roma.jpeg'></imagetarget>
+		<imagetarget id='romaaa' src='targets/romaaa.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <div id="startARDiv" class="ctaDiv">
